--- a/angular.json
+++ b/angular.json
@@ -21,6 +21,7 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
+              "src/favicon.ico",
               "src/assets",
               {
                 "glob": "**/*",
@@ -80,7 +81,6 @@
             ],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
-              "src/assets",
               {
                 "glob": "**/*",
                 "input": "public"
